--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@
 
 include(SA_FetchModule.cmake)
 include(SA_FetchGoogleTest.cmake)
+include(SA_FetchGoogleBenchmark.cmake)
 include(SA_SetMaxWarningLevel.cmake)
 include(SA_SetIntrinsicsFlags.cmake)
