--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ include(SA_FetchGoogleTest.cmake)
 include(SA_FetchGoogleBenchmark.cmake)
 include(SA_SetMaxWarningLevel.cmake)
 include(SA_SetIntrinsicsFlags.cmake)
+include(SA_SetSanitizer.cmake)
+include(SA_SetupTargetForTesting.cmake)
