--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Copyright (c) 2022 Sapphire's Suite. All Rights Reserved.
 
-include(SA_FetchModule.cmake)
-include(SA_FetchGoogleTest.cmake)
+include(SA_ConfigureProject.cmake)
+include(SA_ConfigureTarget.cmake)
 include(SA_FetchGoogleBenchmark.cmake)
-include(SA_SetMaxWarningLevel.cmake)
+include(SA_FetchGoogleTest.cmake)
+include(SA_FetchModule.cmake)
 include(SA_SetIntrinsicsFlags.cmake)
-include(SA_SetSanitizer.cmake)
-include(SA_SetupTargetForTesting.cmake)
+include(SA_TargetSources.cmake)
