--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ include(SA_FetchGoogleBenchmark.cmake)
 include(SA_FetchGoogleTest.cmake)
 include(SA_FetchModule.cmake)
 include(SA_SetIntrinsicsFlags.cmake)
+include(SA_SetRTTIFlags.cmake)
 include(SA_TargetSources.cmake)
