[Add]  FetchOrInclude.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@
 
 include(SA_ConfigureProject.cmake)
 include(SA_ConfigureTarget.cmake)
-include(SA_FetchGoogleBenchmark.cmake)
-include(SA_FetchGoogleTest.cmake)
+include(SA_FetchOrInclude.cmake)
 include(SA_FetchModule.cmake)
+include(SA_FetchGoogleTest.cmake)
+include(SA_FetchGoogleBenchmark.cmake)
 include(SA_SetIntrinsicsFlags.cmake)
 include(SA_SetRTTIFlags.cmake)
 include(SA_TargetSources.cmake)
